<resources>
    <string name="app_name">UltimateNotakto</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Find game</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="board_name">Notakto Board</string>
    <string name="ok">OK</string>
    <string name="board_size">Grid size</string>
    <string name="size1">3x3</string>
    <string name="size2">4x4</string>
    <string name="size3">5x5</string>
    <string name="size4">6x6</string>
    <string name="player_size">Players</string>
    <string name="player_size1">2</string>
    <string name="player_size2">3</string>
    <string name="player_size3">4</string>
    <string name="back">Back</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="music">Music</string>
    <string name="sounds">Sound Effects</string>
    <string name="how_to">How to play</string>
    <string name="lang">Languages</string>
    <string name="sound_volume">0</string>
    <string name="effects_volume">0</string>
    <string name="lang_it">Italiano</string>
    <string name="lang_en">English</string>
    <string name="how_to_play_title">How to play</string>
    <string name="how_to_play">How to play: \n This game is a variant of Tic Tac Toe, where  every player is playing the same piece. \n
        Every time  a player makes a three-in-a-row, he loses. \n
        The last player remaining is the winner.</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lost_dialog_message">You lost. You can stay as a spectator or leave the match.</string>
    <string name="list_dialog_title">You lost</string>
    <string name="won_dialog_message">You won. You can leave the match.</string>
    <string name="win_dialog_title">You won</string>
    <string name="oh_no">Oh no!</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_howtoplay">HowtoplayActivity</string>
    <string name="create_quick_game">Create quick game</string>
    <string name="accept_popup_invite">Accept</string>
    <string name="game_problem">Something went wrong. Try again later.</string>
    <string name="is_inviting_you">is inviting you to join a game</string>
    <string name="please_wait">Please wait</string>
    <string name="automatching">Looking for match&#8230;</string>
    <string name="winner_is">%1$s has won!</string>
    <string name="notTurn">This is not your turn</string>
    <string name="finished_turn">Your turn is finished</string>
    <string name="exit">Exit</string>
    <string name="notConnected">You are not connected to Google Play Games</string>
    <string name="inv_popup_text">has invted you to join a game</string>
    <string name="connection_title">Missing connection</string>
    <string name="connection">You cannot proceed without an internet connection. Please reconnnect and try again.</string>
    <string name="winner_is_title">We got a winner!</string>
    <string name="sign_in_other_error">Something went wrong while trying to connect. Try again later.</string>
    <string name="sign_in_failed">Sign in failed.</string>
</resources>


