<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_activity"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/game_layout_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!--<TextView-->
            <!--android:id="@+id/game_timer"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:textSize="20sp"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_centerHorizontal="true"/>-->

        <Button
            android:id="@+id/option_onGame_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/ic_settings"
            style="@style/ButtonIcon"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="goToOptions"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/players_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_1"
            style="@style/PlayerLabel"
            android:background= "@drawable/back"
            android:text="@string/player1" />

        <TextView
            android:id="@+id/player_2"
            style="@style/PlayerLabel"
            android:layout_toEndOf="@id/player_1"
            android:layout_toRightOf="@id/player_1"
            android:background= "@drawable/back2"
            android:text="@string/player2" />

        <TextView
            android:id="@+id/player_3"
            style="@style/PlayerLabel"
            android:layout_below="@id/player_1"
            android:background= "@drawable/back3"
            android:text="@string/player3" />

        <TextView
            android:id="@+id/player_4"
            style="@style/PlayerLabel"
            android:layout_below="@id/player_2"
            android:layout_toEndOf="@id/player_3"
            android:layout_toRightOf="@id/player_3"
            android:background= "@drawable/back4"
            android:text="@string/player4" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/fragment_container" />

</LinearLayout>